new architecture of app

--- a/Styles/Dictionary.xaml
+++ b/Styles/Dictionary.xaml
@@ -18,4 +18,7 @@
         <Setter Property="Opacity" Value="0.5" />
         <Setter Property="Background" Value="Transparent"/>
     </Style>
+    <Style x:Key="ButtonNavigation" TargetType="RadioButton">
+        
+    </Style>
 </ResourceDictionary>
