--- a/Views/CurrencyPage.xaml
+++ b/Views/CurrencyPage.xaml
@@ -1,14 +1,17 @@
-﻿<Page x:Class="CurrencyWPF.Views.CurrencyPage"
+﻿<UserControl x:Class="CurrencyWPF.Views.CurrencyPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CurrencyWPF.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="CurrencyPage">
+      d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
-        
+        <Button x:Name="ButtonBackToMain"
+                Height="20" 
+                Width="100"
+                Content="Back" 
+                Click="ButtonBackToMain_Click"/>
     </Grid>
-</Page>
+</UserControl>
