--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,76 +5,44 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CurrencyWPF" 
         xmlns:viewmodels="clr-namespace:CurrencyWPF.ViewModels" 
-        d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
+        d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowVM}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Crypee" Height="450" Width="800">
 
     <Grid>
-        <DataGrid x:Name="dgCurrencies"
-                  Margin="10,51,10,10"
-                  CanUserAddRows="True"
-                  AutoGenerateColumns="false"
-                  ItemsSource="{Binding CurrenciesList}"
-                  >
-            <DataGrid.Columns>
-                <DataGridTextColumn Width ="*" Binding="{Binding Path=Symbol}"/>
-                <DataGridTextColumn Width ="*" Header="Name"  Binding="{Binding Path=Name}"/>
-                <DataGridTextColumn Width ="*" Header="Price" Binding="{Binding Path=PriceUsd}"/>
-                <DataGridTextColumn Width ="*" Header="ChangePercent" Binding="{Binding Path=ChangePercent24Hr}"/>
-                <DataGridTextColumn Width ="*" Header="VolumeFor24Hr" Binding="{Binding Path=VolumeUsd24Hr}"/>
-                <DataGridTextColumn Width ="*" Header="MarketCapitalization" Binding="{Binding Path=MarketCapUsd}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <Label Content="Current state of major cryptocurrencies" 
-               Style="{DynamicResource MainWindowLbl}"
-               HorizontalAlignment="Center" 
-               Margin="0,16,0,0" 
-               VerticalAlignment="Top"/>
-        <Button Content="Request data"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Margin="5, 5, 0, 0"
-                Width="100"
-                Height="20"
-                Command="{Binding RefreshData}"/>
-        <Button Content="Stop Updating"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Margin="5, 25, 0, 0"
-                Width="100"
-                Height="20"
-                Command="{Binding StopUpdate}"/>
+        <Border Background="#fffffc"
+                CornerRadius="15"/>
         
-        <Border x:Name="SearchAreaBorder"
-                Style="{DynamicResource SearchAreaBorder}" 
-                HorizontalAlignment="Right" 
-                 VerticalAlignment="Top" 
-                 Width="140" 
-                 Height="20" 
-                 Margin="0, 25, 10, 0">
-           <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="20" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Image Source="/Resources/magnifier.png"
-                    Grid.Row="0" Grid.Column="0"
-                    Width="50"/>
-                <Label x:Name="SearchTextBoxHiddenLabel"
-                       Grid.Row="0" Grid.Column="1" 
-                       Padding="2,0,0,0"
-                       Content="Search by the name"
-                       Style="{DynamicResource SearchTextBoxHiddenLabel}"/>
-                <TextBox x:Name="SearchTextBox" 
-                        Grid.Row="0" Grid.Column="1"
-                        Style="{DynamicResource SearchTextBox}"
-                        TextChanged="SearchTextBox_TextChanged"/>
-            </Grid> 
-        </Border>
-        
-        
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="228"/>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            
+            <Grid HorizontalAlignment="Left"
+              Width="220">
+                <Border Background="#caffbf"
+                        CornerRadius="15,0,0,15"/>
+
+                <StackPanel Height="400"
+                            Width="220">
+                    <RadioButton Style="{StaticResource ButtonNavigation}"
+                                 Command="{Binding AssetsOpen}"
+                                 IsChecked="True">
+                        <Grid>
+                            <StackPanel Orientation="Horizontal">
+                                <Image Source="/Resources/crypto.png"
+                                   Height="20"/>
+                                <TextBlock Text="Assets" />
+                            </StackPanel>
+                        </Grid>
+                    </RadioButton>
+                </StackPanel>
+            </Grid>
+            <Grid Grid.Column="1">
+                <ContentControl x:Name="Pages"
+                      Content="{Binding CurrentView}" />
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
