--- a/Utilities/DataTemplate.xaml
+++ b/Utilities/DataTemplate.xaml
@@ -1,9 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:vm="clr-namespace:CurrencyWPF.ViewModels"
-                    xmlns:views="clr-namespace:CurrencyWPF.Views">
-    <!--<DataTemplate DataType="{x:Type vm:AssetsPageVM}">
+                    xmlns:vm="clr-namespace:CurrencyWPF.ViewModels;assembly=CurrencyWPF"
+                    xmlns:views="clr-namespace:CurrencyWPF.Views;assembly=CurrencyWPF">
+    <DataTemplate DataType="{x:Type vm:AssetsPageVM}">
         <views:AssetsPage/>
-    </DataTemplate>-->
-    
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type vm:CurrencyPageVM}">
+        <views:CurrencyPage />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type vm:MainWindowVM}">
+        <views:MainWindow/>
+    </DataTemplate>
 </ResourceDictionary>
