--- a/Views/CurrencyPage.xaml
+++ b/Views/CurrencyPage.xaml
@@ -3,15 +3,51 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CurrencyWPF.Views"
+      xmlns:local="clr-namespace:CurrencyWPF.Views" 
+      xmlns:viewmodels="clr-namespace:CurrencyWPF.ViewModels" 
+      d:DataContext="{d:DesignInstance Type=viewmodels:CurrencyPageVM}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
+    <UserControl.DataContext>
+        <viewmodels:CurrencyPageVM />
+    </UserControl.DataContext>
+    
     <Grid>
-        <Button x:Name="ButtonBackToMain"
-                Height="20" 
-                Width="100"
-                Content="Back" 
-                Click="ButtonBackToMain_Click"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock Grid.Row="0" Grid.Column="0"
+                   Text="{Binding CurrentCurrency.Name}"/>
+        <TextBlock Grid.Row="0" Grid.Column="1"
+                   Text="{Binding CurrentCurrency.PriceUsd}" />
+        <TextBlock Grid.Row="0" Grid.Column="2" 
+                   Text="{Binding CurrentCurrency.ChangePercent24Hr}" />
+        <TextBlock Grid.Row="0" Grid.Column="3" 
+                   Text="{Binding CurrentCurrency.VolumeUsd24Hr}" />
+
+        <StackPanel Grid.Row="1" Grid.Column="0">
+            <TextBlock Text="History place" 
+                       HorizontalAlignment="Center" />
+        </StackPanel>
+
+        <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" 
+                   Text="Chart place"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"/>
+
+        <Button Grid.Row="0"
+                Grid.Column="4" 
+                Content="Back"
+                Click="Button_Click"/>
     </Grid>
 </UserControl>
