--- a/App.xaml
+++ b/App.xaml
@@ -7,7 +7,15 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/Dictionary.xaml"/>
+                
                 <ResourceDictionary Source="Utilities/DataTemplate.xaml" />
+                
+                <ResourceDictionary Source="Styles/Button.xaml" />
+                <ResourceDictionary Source="Styles/Image.xaml" />
+                <ResourceDictionary Source="Styles/Text.xaml" />
+                <ResourceDictionary Source="Styles/UserControl.xaml" />
+                
+                <ResourceDictionary Source="Styles/Colors.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
