--- a/Views/AssetsPage.xaml
+++ b/Views/AssetsPage.xaml
@@ -8,14 +8,17 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
+    <UserControl.DataContext>
+        <vm:AssetsPageVM />
+    </UserControl.DataContext>
+    
     <Grid>
         <DataGrid x:Name="dgCurrencies"
                   Margin="10,51,10,10"
                   CanUserAddRows="True"
                   AutoGenerateColumns="False"
                   IsReadOnly="True"
-                  ItemsSource="{Binding CurrenciesList}"
-                  >
+                  ItemsSource="{Binding CurrenciesList}">
             <DataGrid.CellStyle>
                 <Style TargetType="DataGridCell">
                     <EventSetter Event="MouseDoubleClick" Handler="DataGridCell_MouseDoubleClick" />
