--- a/Styles/Text.xaml
+++ b/Styles/Text.xaml
@@ -5,7 +5,7 @@
         <Setter Property="FontFamily" Value="Helvetica" />
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="Foreground" Value="#DBDBDB" />
+        <Setter Property="Foreground" Value="#fffffc" />
         <Setter Property="FontSize" Value="18" />
         <Setter Property="Margin" Value="70,0,0,0"/>
     </Style>
