--- a/Views/CurrencyPage.xaml
+++ b/Views/CurrencyPage.xaml
@@ -35,13 +35,13 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0"
-                       Text="{Binding Path=CurrentCurrency.Name}"/>
+                       Text="{Binding CurrentCurrency.Name}"/>
             <TextBlock Grid.Column="1"
                        Text="{Binding Path=CurrentCurrency.PriceUsd}" />
             <TextBlock Grid.Column="2" 
-                       Text="{Binding ChangePercent24Hr}" />
+                       Text="{Binding CurrentCurrency.ChangePercent24Hr}" />
             <TextBlock Grid.Column="3" 
-                       Text="{Binding VolumeUsd24Hr}" />   
+                       Text="{Binding CurrentCurrency.VolumeUsd24Hr}" />   
         </Grid>
         
 
