--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -46,6 +46,15 @@
                                             Text="Assets" />
                         </Grid>
                     </RadioButton>
+                    <RadioButton x:Name="CurrencyButton"
+                                 Style="{StaticResource MainButton}"
+                                 Command="{Binding CurrencyDetailsOpen}">
+                        <Grid>
+                            
+                            <TextBlock Style="{DynamicResource MediumText}"
+                                            Text="Currency" />
+                        </Grid>
+                    </RadioButton>
                 </StackPanel>
             </Grid>
             <Grid Grid.Column="1">
