--- a/Views/CurrencyPage.xaml
+++ b/Views/CurrencyPage.xaml
@@ -21,30 +21,11 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid 
-              Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0"
-                       Text="{Binding CurrentCurrency.Name}"/>
-            <TextBlock Grid.Column="1"
-                       Text="{Binding Path=CurrentCurrency.PriceUsd}" />
-            <TextBlock Grid.Column="2" 
-                       Text="{Binding CurrentCurrency.ChangePercent24Hr}" />
-            <TextBlock Grid.Column="3" 
-                       Text="{Binding CurrentCurrency.VolumeUsd24Hr}" />   
-        </Grid>
-
-
-        <ItemsControl x:Name="History" ItemsSource="{Binding CurrenciesHistory}">
+        <ItemsControl x:Name="History" ItemsSource="{Binding CurrencyHistoryList}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel Orientation="Vertical" />
+                    <StackPanel Grid.Row="1" Grid.Column="1"
+                        Orientation="Vertical" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
@@ -55,16 +36,33 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-                      
+        
+        <Grid 
+              Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0"
+                       Text="{Binding CurrentCurrency.Name}" Grid.ColumnSpan="2"/>
+            <TextBlock Grid.Column="1"
+                       Text="{Binding Path=CurrentCurrency.PriceUsd}" />
+            <TextBlock Grid.Column="2" 
+                       Text="{Binding CurrentCurrency.ChangePercent24Hr}" />
+            <TextBlock Grid.Column="3" 
+                       Text="{Binding CurrentCurrency.VolumeUsd24Hr}" />
+        </Grid>
+
+
+        
+
 
         <TextBlock Grid.Row="1" Grid.Column="1" 
                    Text="Chart place"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"/>
-
-        <Button Grid.Row="0"
-                Grid.Column="2" 
-                Content="Back"
-                Command="{Binding suka}"/>
     </Grid>
 </UserControl>
