--- a/Views/CurrencyPage.xaml
+++ b/Views/CurrencyPage.xaml
@@ -21,24 +21,19 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <ItemsControl x:Name="History" ItemsSource="{Binding CurrencyHistoryList}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Grid.Row="1" Grid.Column="1"
-                        Orientation="Vertical" />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding PriceUsd}"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-        
-        <Grid 
-              Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+        <DataGrid x:Name="dgCurrencies"
+                  Grid.Row="1" Grid.Column="0"
+                  Margin="10,51,10,10"
+                  CanUserAddRows="True"
+                  AutoGenerateColumns="False"
+                  IsReadOnly="True"
+                  ItemsSource="{Binding CurrencyHistoryList}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width ="*" Binding="{Binding PriceUsd}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -47,18 +42,18 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0"
-                       Text="{Binding CurrentCurrency.Name}" Grid.ColumnSpan="2"/>
+                       Text="{Binding CurrentCurrency.Name}"
+                       Style="{StaticResource SmallText}"/>
             <TextBlock Grid.Column="1"
-                       Text="{Binding Path=CurrentCurrency.PriceUsd}" />
+                       Text="{Binding Path=CurrentCurrency.PriceUsd}" 
+                       Style="{StaticResource SmallText}"/>
             <TextBlock Grid.Column="2" 
-                       Text="{Binding CurrentCurrency.ChangePercent24Hr}" />
+                       Text="{Binding CurrentCurrency.ChangePercent24Hr}" 
+                       Style="{StaticResource SmallText}"/>
             <TextBlock Grid.Column="3" 
-                       Text="{Binding CurrentCurrency.VolumeUsd24Hr}" />
+                       Text="{Binding CurrentCurrency.VolumeUsd24Hr}" 
+                       Style="{StaticResource SmallText}"/>
         </Grid>
-
-
-        
-
 
         <TextBlock Grid.Row="1" Grid.Column="1" 
                    Text="Chart place"
