--- a/Views/CurrencyPage.xaml
+++ b/Views/CurrencyPage.xaml
@@ -13,27 +13,48 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50" />
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
+        <Button Grid.Row="0" Grid.Column="0"
+                Background="Transparent"
+                Click="Button_Click"
+                BorderThickness="0">
+            <Grid>
+                <Rectangle
+                   Stroke="#bdb2ff" StrokeThickness="2"
+                   RadiusY="13.5" RadiusX="13.5"/>
+
+                <Image Source="../Resources/backward.png" />
+            </Grid>
+        </Button>
+        
         <DataGrid x:Name="dgCurrencies"
-                  Grid.Row="1" Grid.Column="0"
+                  Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
                   Margin="10,51,10,10"
                   CanUserAddRows="True"
                   AutoGenerateColumns="False"
                   IsReadOnly="True"
-                  ItemsSource="{Binding CurrencyHistoryList}">
+                  ItemsSource="{Binding CurrencyHistoryList}"
+                  >
             <DataGrid.Columns>
-                <DataGridTextColumn Width ="*" Binding="{Binding PriceUsd}"/>
+                <DataGridTextColumn Header="Price" 
+                                    Width ="*" 
+                                    Binding="{Binding PriceUsd, StringFormat=N2}"/>
+                <DataGridTextColumn Header="Date"
+                                    Width ="*" 
+                                    Binding="{Binding Date, StringFormat='{}{0:MM/dd/yyyy h:mm tt}'}"/>
             </DataGrid.Columns>
         </DataGrid>
 
-        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+        <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -43,19 +64,19 @@
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0"
                        Text="{Binding CurrentCurrency.Name}"
-                       Style="{StaticResource SmallText}"/>
+                       Style="{StaticResource CurrencyText}"/>
             <TextBlock Grid.Column="1"
-                       Text="{Binding Path=CurrentCurrency.PriceUsd}" 
-                       Style="{StaticResource SmallText}"/>
+                       Text="{Binding Path=CurrentCurrency.PriceUsd, StringFormat=N2}" 
+                       Style="{StaticResource CurrencyText}"/>
             <TextBlock Grid.Column="2" 
-                       Text="{Binding CurrentCurrency.ChangePercent24Hr}" 
-                       Style="{StaticResource SmallText}"/>
+                       Text="{Binding CurrentCurrency.ChangePercent24Hr, StringFormat=N4}" 
+                       Style="{StaticResource CurrencyText}"/>
             <TextBlock Grid.Column="3" 
-                       Text="{Binding CurrentCurrency.VolumeUsd24Hr}" 
-                       Style="{StaticResource SmallText}"/>
+                       Text="{Binding CurrentCurrency.VolumeUsd24Hr, StringFormat=N2}" 
+                       Style="{StaticResource CurrencyText}"/>
         </Grid>
 
-        <TextBlock Grid.Row="1" Grid.Column="1" 
+        <TextBlock Grid.Row="2" Grid.Column="2" 
                    Text="Chart place"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"/>
