--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -19,6 +19,7 @@
     </Window.DataContext>
     
     <Grid>
+        
         <Border Background="#fffffc"
                 CornerRadius="15"/>
         
@@ -33,15 +34,21 @@
                 <Border Background="{StaticResource Menu}"
                         CornerRadius="15,0,0,15"/>
 
+                
                 <StackPanel Height="400"
                             Width="220">
+                    <TextBlock x:Name="Title"
+                               Style="{StaticResource MediumText}"
+                               Text="Crype App" 
+                               HorizontalAlignment="Left"
+                               Margin="65,0,0,15"/>
                     <RadioButton x:Name="AssetsButton"
                                  Style="{StaticResource MainButton}"
                                  Command="{Binding AssetsOpen}"
                                  IsChecked="True">
                         <Grid>
-                            <Image  Style="{DynamicResource Icon}"
-                                        Source="/Resources/crypto.png" />
+                            <Image Style="{DynamicResource Icon}"
+                                        Source="/Resources/list.png" />
                             <TextBlock Style="{DynamicResource MediumText}"
                                             Text="Assets" />
                         </Grid>
@@ -50,9 +57,10 @@
                                  Style="{StaticResource MainButton}"
                                  Command="{Binding}">
                         <Grid>
-                            
                             <TextBlock Style="{DynamicResource MediumText}"
                                             Text="Currency" />
+                            <Image Style="{DynamicResource Icon}"
+                                        Source="/Resources/crypto.png" />
                         </Grid>
                     </RadioButton>
                 </StackPanel>
