--- a/Styles/Text.xaml
+++ b/Styles/Text.xaml
@@ -9,6 +9,14 @@
         <Setter Property="FontSize" Value="18" />
         <Setter Property="Margin" Value="70,0,0,0"/>
     </Style>
+    <Style x:Key="SmallText" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="Helvetica"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="Foreground" Value="#000814" />
+        <Setter Property="FontSize" Value="15" />
+        <Setter Property="Margin" Value="5,0,0,0"/>
+    </Style>
 
     <Style x:Key="CurrencyText" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="Helvetica"/>
